k8s/coma/apps/synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: synapse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "matrix.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: synapse-matrix-synapse
                port:
                  number: 8008
    - host: "artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/.well-known/matrix/"
            backend:
              service:
                name: synapse-wellknown-lighttpd
                port:
                  number: 80
  tls:
    - hosts:
        - "artichoke.cc"
        - "matrix.artichoke.cc"
      secretName: tls-secret
